Very basic SCTP common header parsing. Initially, determine whether SCTP layer is present based on protocol type in IPv4 / IPv6 header (132 for SCTP), and whether we have at least 12 bytes of payload (enough for an SCTP common header). Checksum not yet validated. Construction of header not yet implemented.

--- a/mk/vs/Packet++.vcxproj.filters
+++ b/mk/vs/Packet++.vcxproj.filters
@@ -284,6 +284,9 @@
     <ClCompile Include="..\..\Packet++\src\RawPacket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Packet++\src\SctpLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Packet++\src\SipLayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
