--- a/mk/vs/Packet++Test.vcxproj.template
+++ b/mk/vs/Packet++Test.vcxproj.template
@@ -190,6 +190,7 @@
     <ClCompile Include="..\..\Tests\Packet++Test\Tests\PacketUtilsTests.cpp" />
     <ClCompile Include="..\..\Tests\Packet++Test\Tests\PPPoETests.cpp" />
     <ClCompile Include="..\..\Tests\Packet++Test\Tests\RadiusTests.cpp" />
+    <ClCompile Include="..\..\Tests\Packet++Test\Tests\SctpTests.cpp" />
     <ClCompile Include="..\..\Tests\Packet++Test\Tests\SipSdpTests.cpp" />
     <ClCompile Include="..\..\Tests\Packet++Test\Tests\SllNullLoopbackTests.cpp" />
     <ClCompile Include="..\..\Tests\Packet++Test\Tests\SomeIpTests.cpp" />
